--- a/.sample.env
+++ b/.sample.env
@@ -1,7 +1,7 @@
-APP_API_KEY="YOUR_STUFF_HERE"
-APP_AUTH_DOMAIN="YOUR_STUFF_HERE"
-APP_DATABASE_URL="YOUR_STUFF_HERE"
-APP_PROJECT_ID="YOUR_STUFF_HERE"
-APP_STORAGE_BUCKET="YOUR_STUFF_HERE"
-APP_APP_ID="YOUR_STUFF_HERE"
-APP_MEASUREMENT_ID="YOUR_STUFF_HERE"
+APP_API_KEY="AIzaSyB9BD7hnXmbqMnRxKjRYiBgdeK2005u8Os"
+APP_AUTH_DOMAIN="almost-amazing-9669f.firebaseapp.com"
+APP_DATABASE_URL="https://almost-amazing-9669f-default-rtdb.firebaseio.com"
+APP_PROJECT_ID="almost-amazing-9669f"
+APP_STORAGE_BUCKET="almost-amazing-9669f.appspot.com"
+APP_APP_ID="1:746394599282:web:0784d2e3361d163ac9e7eb"
+APP_MEASUREMENT_ID="G-SQ5Y1X4W2V"
